# linkedinctl

./: .gitignore  CHANGELOG.md  LINKEDIN_LAUNCH_PROMPTS.md  LINKEDIN_POST_v0.0.1.md  NEXT_AGENTS_MAINTENANCE.md  PROOF_v0.0.1.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.browser.json
browser/src/: main.ts
browser/src/actions/: banner.ts  experience.ts  helpers.ts  photo.ts  skills.ts  text.ts
browser/src/commands/: apply-operation.ts  login.ts  pull.ts  readiness.ts
browser/src/core/: config.ts  errors.ts  io.ts  protocol.ts  runlog.ts  runtime-types.ts  session.ts
browser/src/selectors/: profile.ts
browser/src/tools/: cover-probe.ts
examples/: profile-changes.sample.json  profile-headline-audit-commit-v1.json  profile-live-cover-e2e-edit-1775848201.json  profile-live-cover-only.json  profile-live-dev-refresh-v10.json  profile-live-developer-update.json  profile-live-experiences-batch.sample.json  profile-live-headline-only-v3.json  profile-live-headline-only-v4.json  profile-live-headline-only-v5.json  profile-live-headline-only.json  profile-live-photo-developer-v1.json  profile-live-text-photo.sample.json
scripts/: linkedinctl  linkedinctl-browser  linkedinctl-cover-probe
skills/cover-debug/: SKILL.md
src/linkedinctl/: cli.py
src/linkedinctl/lib/: __init__.py  banner_render.py  contracts.py  engine.py  errors.py  garbage_collector.py  gitops.py  runtime_paths.py  snapshot.py  store.py
tests/: test_banner_render.py  test_contracts.py  test_engine_pipeline.py  test_garbage_collector.py
(+2 files in other folders)
